--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div id="welcomeContainer">
             <h1 id="welcomeMessage">Welcome to my website!</h1>
-        <button id="greetButton">Enter your name</button>
+        <button id="greetButton">enter your name</button>
         <script src="js/pesan.js"></script>
     </div>
 </div>
